<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Fragment Launch -->
    <string name="fragment_launch_upcoming_elections">Upcoming Elections</string>
    <string name="fragment_launch_find_my_representatives">Find My Representatives</string>

    <!-- Fragment Election -->
    <string name="fragment_election_upcoming_elections">Upcoming Elections</string>
    <string name="fragment_election_saved_elections">Saved Elections</string>

    <!-- Fragment Representative -->
    <string name="fragment_representative_representative_search">Representative Search</string>
    <string name="fragment_representative_address_line_1">Address Line 1</string>
    <string name="fragment_representative_address_line_2">Address Line 2</string>
    <string name="fragment_representative_city">City</string>
    <string name="fragment_representative_state">State</string>
    <string name="fragment_representative_zip_code">Zip Code</string>
    <string name="fragment_representative_find_my_representatives">Find My Representatives</string>
    <string name="fragment_representative_use_my_location">Use My Location</string>
    <string name="fragment_representative_fill_address">Please fill in the address</string>
    <string name="fragment_representative_grant_locations">You need to grant location permission</string>
    <string name="fragment_representative_enable_location">Please enable location</string>

    <!-- Fragment Voter info -->
    <string name="fragment_voter_info_election_information">Election Information</string>
    <string name="fragment_voter_info_voting_locations">Voting Locations</string>
    <string name="fragment_voter_info_ballot_information">Ballot Information</string>
    <string name="fragment_voter_info_election_address">Election Address</string>
    <string name="fragment_voter_info_follow_election">Follow Election</string>
    <string name="fragment_voter_info_could_not_load">Could not load proper url</string>
    <string name="fragment_voter_info_unfollow_election">Unfollow Election</string>
    <string name="fragment_representative_error_current_location">Error retrieving current location</string>

</resources>
